<resources>
    <string name="app_name">Friends</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Автор</string>
    <string name="nav_header_subtitle">Иванченко Иван Русланович</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--    <string name="action_settings">Settings</string>-->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_main2">Main2</string>
    <string name="menu_main3">Main3</string>
    <string name="menu_webview">WebView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>