<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"/>

        <item
            android:id="@+id/nav_main2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_main2" />
        <item
            android:id="@+id/nav_main3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_main3" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_webview" />


    </group>
</menu>