<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.friends.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.friends.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <activity android:id="@+id/nav_main2"
        tools:layout="@layout/activity_main2"
        android:name="com.example.friends.MainActivity2"
        android:label="@string/menu_main2"/>

    <activity android:id="@+id/nav_main3"
        tools:layout="@layout/activity_main3"
        android:name="com.example.friends.MainActivity3"
        android:label="@string/menu_main3"/>

    <activity android:id="@+id/nav_webview"
        tools:layout="@layout/activity_webview"
        android:name="com.example.friends.WebViewActivity"
        android:label="@string/menu_webview"/>

</navigation>